--- a/client/index.html
+++ b/client/index.html
@@ -3,9 +3,10 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link href="/dist/output.css" rel="stylesheet">
     <title>PixelPaws</title>
 </head>
 <body>
-    
+    <h1 class="p-10">Hello</h1>
 </body>
 </html>
