--- a/client/index.html
+++ b/client/index.html
@@ -9,110 +9,135 @@
 </head>
 
 <body>
-    <main class="p-8 flex flex-col gap-3">
-        <div class="grid grid-cols-7 gap-3">
-            <div class="col-span-3 border border-slate-300 rounded p-7">
-                <h2 class="mb-2 text-xl leading-none">NAME</h2>
+    <main class="p-7 flex flex-col gap-3 font-mono">
 
-                <div class="flex gap-3">
+        <section id="dashboard" class="grid grid-cols-7 gap-3" >
+            <div class="col-span-7 md:col-span-4 lg:col-span-3 border border-neutral rounded p-7">
+                <h2 class="mb-2 text-lg leading-none">NAME</h2>
+
+                <div class="flex gap-2">
                     <img src="images/dog.jpg" class="w-1/2 aspect-w-3 aspect-h-2">
 
-                    <div class="flex flex-col gap-3 w-1/2">
+                    <div class="flex flex-col gap-3 w-1/2 text-xs leading-tight">
                         <div>
-                            <p class="text-sm leading-none">Happiness</p>
-                            <progress class="progress progress-primary w-full" value="0" max="100"></progress>
+                            <p>Happiness <span>100%</span></p>
+                            <progress class="progress progress-primary" value="100" max="100"></progress>
                         </div>
 
                         <div>
-                            <p class="text-sm leading-none">Health</p>
-                            <progress class="progress progress-primary" value="10" max="100"></progress>
+                            <p>Health <span>100%</span></p>
+                            <progress class="progress progress-primary" value="100" max="100"></progress>
                         </div>
 
                         <div>
-                            <p class="text-sm leading-none">Hunger</p>
-                            <progress class="progress progress-primary" value="10" max="100"></progress>
+                            <p>Hunger <span>100%</span></p>
+                            <progress class="progress progress-primary" value="100" max="100"></progress>
                         </div>
 
                         <div>
-                            <p class="text-sm leading-none">Sleep</p>
-                            <progress class="progress progress-primary" value="10" max="100"></progress>
+                            <p>Sleep <span>100%</span></p>
+                            <progress class="progress progress-primary" value="100" max="100"></progress>
                         </div>
 
                         <p>Personality: <span>Quiet</span></p>
+                        <p class="text-primary text-base">MONEY: $</p> 
                     </div>
                 </div>
  
-                <p class="text-primary text-lg mt-5">MONEY: []</p> 
+                
             </div>
 
-            <div class="col-span-2 border border-slate-300 rounded p-7">
-                <h2 class="mb-3 text-xl leading-none">SKILLS</h2>
+            <div class="col-span-7 md:col-span-3 lg:col-span-2 border border-neutral rounded p-7">
+                <h2 class="mb-3 text-lg leading-none">SKILLS</h2>
 
 
-                <div class="grid grid-cols-1 gap-3">
+                <div class="grid grid-cols-1 gap-2 text-xs leading-tight">
                     <div>
-                        <p class="text-sm leading-none">Agility</p>
-                        <progress class="progress progress-secondary w-full" value="0" max="100"></progress>
+                        <p>Agility <span>1</span></p>
+                        <progress class="progress progress-secondary w-full" value="0" max="10"></progress>
                     </div>
 
                     <div>
-                        <p class="text-sm leading-none">Strength</p>
-                        <progress class="progress progress-secondary" value="10" max="100"></progress>
+                        <p>Strength <span>1</span></p>
+                        <progress class="progress progress-secondary" value="3" max="10"></progress>
                     </div>
 
                     <div>
-                        <p class="text-sm leading-none">Intelligence</p>
-                        <progress class="progress progress-secondary" value="10" max="100"></progress>
+                        <p>Intelligence <span>1</span></p>
+                        <progress class="progress progress-secondary" value="2" max="10"></progress>
                     </div>
 
                     <div>
-                        <p class="text-sm leading-none">Agility</p>
-                        <progress class="progress progress-secondary w-full" value="0" max="100"></progress>
+                        <p>Agility <span>1</span></p>
+                        <progress class="progress progress-secondary w-full" value="0" max="10"></progress>
                     </div>
 
                     <div>
-                        <p class="text-sm leading-none">Strength</p>
-                        <progress class="progress progress-secondary" value="10" max="100"></progress>
+                        <p>Strength <span>1</span></p>
+                        <progress class="progress progress-secondary" value="6" max="10"></progress>
                     </div>
 
                     <div>
-                        <p class="text-sm leading-none">Intelligence</p>
-                        <progress class="progress progress-secondary" value="10" max="100"></progress>
+                        <p>Intelligence <span>1</span></p>
+                        <progress class="progress progress-secondary" value="7" max="10"></progress>
                     </div>
                 </div>
             </div>
-            <div class="col-span-2 border border-slate-300 rounded p-7">
-                <h2 class="mb-2 text-xl leading-none">THINGS TO DO</h2>
+
+            <div class="col-span-7 md:col-span-3 lg:col-span-2 border border-neutral rounded p-7">
+                <h2 class="mb-3 text-lg leading-none">THINGS TO DO</h2>
 
                 <div class="flex flex-col gap-3">
-                    <div class="tooltip tooltip-left tooltip-accent" data-tip="hello"><button class="btn btn-outline w-full">Play a Mini-Game</button></div>
-                    <div class="tooltip tooltip-accent" data-tip="hello"><button class="btn btn-outline w-full">Skill Training</button></div>
-                    <div class="tooltip tooltip-accent" data-tip="hello"><button class="btn btn-outline w-full">Buy Items</button></div>
-                    <div class="tooltip tooltip-accent" data-tip="hello"><button class="btn btn-outline w-full">Enter a Contest</button></div>
-                    <div class="tooltip tooltip-accent" data-tip="hello"><button class="btn btn-outline w-full">Go on an Adventure</button></div>
+                    <div class="tooltip tooltip-left tooltip-accent" data-tip="hello"><button class="btn btn-sm btn-outline w-full">Play a Mini-Game</button></div>
+                    <div class="tooltip tooltip-accent" data-tip="hello"><button class="btn btn-outline btn-sm w-full">Skill Training</button></div>
+                    <div class="tooltip tooltip-accent" data-tip="hello"><button class="btn btn-outline btn-sm w-full">Buy Items</button></div>
+                    <div class="tooltip tooltip-accent" data-tip="hello"><button class="btn btn-outline btn-sm w-full">Enter a Contest</button></div>
+                    <div class="tooltip tooltip-accent" data-tip="hello"><button class="btn btn-outline btn-sm w-full">Go on an Adventure</button></div>
                 </div>
             </div>
-        </div>
 
-        <div class="grid grid-cols-3">
-            <div class="bg-slate-600">
-                history
-            </div>
-            <div class="bg-emerald-700">
-                inventory
-            </div>
-            
-        </div>
+            <div class="col-span-7 md:col-span-4 lg:col-span-2 border border-neutral rounded p-7">
+                <h2 class="mb-3 text-lg leading-none">HISTORY</h2>
 
-        <div class="grid grid-cols-2">
-            <div class="bg-slate-600">
-                money
+                <ul class="text-sm overflow-y-scroll h-40 md:h-[13rem] lg:h-36">
+                    <li class="border-b py-1">lorem ipsum</li>
+                    <li class="border-b py-1">lorem ipsum</li>
+                    <li class="border-b py-1">lorem ipsum</li>
+                    <li class="border-b py-1">lorem ipsum</li>
+                    <li class="border-b py-1">lorem ipsum</li>
+                    <li class="border-b py-1">lorem ipsum</li>
+                    <li class="border-b py-1">lorem ipsum</li>
+                    <li class="border-b py-1">lorem ipsum</li>
+                    <li class="border-b py-1">lorem ipsum</li>
+                    <li class="border-b py-1">lorem ipsum</li>
+                </ul>
             </div>
-            <div class="bg-emerald-700">
-                achievements
+
+            <div class="col-span-7 md:col-span-4 lg:col-span-3 border border-neutral rounded p-7 ">
+                <h2 class="mb-3 text-lg leading-none">INVENTORY</h2>
+
+                <ul class="text-sm overflow-y-scroll h-40 md:h-[13rem] lg:h-36">
+                    <li class="border-b py-1">lorem ipsum</li>
+                    <li class="border-b py-1">lorem ipsum</li>
+                    <li class="border-b py-1">lorem ipsum</li>
+                    <li class="border-b py-1">lorem ipsum</li>
+                    <li class="border-b py-1">lorem ipsum</li>
+                    <li class="border-b py-1">lorem ipsum</li>
+                    <li class="border-b py-1">lorem ipsum</li>
+                    <li class="border-b py-1">lorem ipsum</li>
+                    <li class="border-b py-1">lorem ipsum</li>
+                    <li class="border-b py-1">lorem ipsum</li>
+                </ul>
             </div>
-        </div>
+
+            <div class="col-span-7 md:col-span-3 lg:col-span-2 border border-neutral rounded p-7 ">
+                <h2 class="mb-3 text-lg leading-none">ACHIEVEMENTS</h2>
+            </div>
+        </section>  
+
     </main>
+
+    <script src="main.js"></script>
 </body>
 
 </html>
