--- a/client/index.html
+++ b/client/index.html
@@ -11,12 +11,12 @@
 <body>
     <main class="p-7 flex flex-col gap-3 font-mono">
 
-        <section id="dashboard" class="grid grid-cols-7 gap-3" >
+        <section id="dashboard" class="grid grid-cols-7 gap-3 hidden">
             <div class="col-span-7 md:col-span-4 lg:col-span-3 border border-neutral rounded p-7">
                 <h2 class="mb-2 text-lg leading-none">NAME</h2>
 
                 <div class="flex gap-2">
-                    <img src="images/dog.jpg" class="w-1/2 aspect-w-3 aspect-h-2">
+                    <img src="" id="pet-pic" class="w-1/2 aspect-w-3 aspect-h-2">
 
                     <div class="flex flex-col gap-3 w-1/2 text-xs leading-tight">
                         <div>
@@ -133,7 +133,20 @@
             <div class="col-span-7 md:col-span-3 lg:col-span-2 border border-neutral rounded p-7 ">
                 <h2 class="mb-3 text-lg leading-none">ACHIEVEMENTS</h2>
             </div>
-        </section>  
+        </section>
+        
+        
+        <section id="begin-screen" class="h-screen flex flex-col justify-center items-center gap-8">
+            <div class="text-center">
+                <h1 class="font-bold">welcome to pixelpaws</h1>
+                <p class="text-sm">choose your pet</p>
+            </div>
+
+            <div id="choose-pet" class="flex gap-6">
+                <img src="images/cat.jpg" id="cat" class="w-36 transition-all hover:cursor-pointer hover:shadow hover:-translate-y-1">
+                <img src="images/dog.jpg" id="dog" class="w-36 transition-all hover:cursor-pointer hover:shadow hover:-translate-y-1">
+            </div>
+        </section>
 
     </main>
 
