--- a/client/index.html
+++ b/client/index.html
@@ -17,32 +17,33 @@
 <body>
     <main id="main" class="p-7 flex flex-col gap-3 font-mono">
 
+        <!-- DASHBOARD -->
         <section id="dashboard" class="grid grid-cols-7 gap-3">
             <div class="col-span-7 md:col-span-4 lg:col-span-3 border border-neutral rounded p-7">
-                <h2 id="pet-name" class="mb-2 text-lg leading-none"></h2>
+                <h2 id="pet-name" class="mb-2 text-lg leading-none">Toby</h2>
 
                 <div class="flex gap-2">
-                    <img src="" id="pet-pic" class="w-1/2 aspect-w-3 aspect-h-2">
+                    <img src="images/dog.jpg" id="pet-pic" class="w-1/2 aspect-w-3 aspect-h-2">
 
                     <div class="flex flex-col gap-3 w-1/2 text-xs leading-tight">
                         <div>
-                            <p>Happiness <span>100%</span></p>
-                            <progress class="progress progress-primary" value="100" max="100"></progress>
+                            <p>Happiness <span id="happiness-label">100%</span></p>
+                            <progress id="happiness-bar" class="progress progress-primary" value="100" max="100"></progress>
                         </div>
 
                         <div>
-                            <p>Health <span>100%</span></p>
-                            <progress class="progress progress-primary" value="100" max="100"></progress>
+                            <p>Health <span id="health-label">100%</span></p>
+                            <progress id="health-bar" class="progress progress-primary" value="100" max="100"></progress>
                         </div>
 
                         <div>
-                            <p>Hunger <span>100%</span></p>
-                            <progress class="progress progress-primary" value="100" max="100"></progress>
+                            <p>Hunger <span id="hunger-label">100%</span></p>
+                            <progress id="hunger-bar" class="progress progress-primary" value="100" max="100"></progress>
                         </div>
 
                         <div>
-                            <p>Sleep <span>100%</span></p>
-                            <progress class="progress progress-primary" value="100" max="100"></progress>
+                            <p>Sleep <span id="sleep-label">100%</span></p>
+                            <progress id="sleep-bar" class="progress progress-primary" value="100" max="100"></progress>
                         </div>
 
                         <p>Personality: <span id="pet-personality">Quiet</span></p>
@@ -146,7 +147,7 @@
             </div>
         </section>
 
-
+        <!-- GAME START FORM -->
         <form id="choose-pet-form" class="flex flex-col justify-center items-center gap-12">
             <div class="text-center">
                 <h1 class="font-bold">welcome to pixelpaws</h1>
