feeding decreases quantities

--- a/client/index.html
+++ b/client/index.html
@@ -138,9 +138,9 @@
             <div class="col-span-7 md:col-span-4 lg:col-span-3 border border-neutral rounded p-7">
                 <h2 class="mb-3 text-lg leading-none">INVENTORY</h2>
 
-                <div class="overflow-x-auto overflow-y-scroll h-40 md:h-[208px] lg:h-[128px]">
+                <div class="overflow-x-auto h-40 md:h-[208px] lg:h-[128px]">
                     <table class="table table-xs table-pin-rows">
-                        <!-- head -->
+
                         <thead>
                             <tr>
                                 <th>Item</th>
@@ -149,29 +149,22 @@
                             </tr>
                         </thead>
                         <tbody>
-                            <!-- row 1 -->
-                            <tr>
-                                <td>Apples</td>
-                                <td id="apple-qty">0</td>
-                                <td><button class="feed-btns btn btn-xs">feed</button></td>
-                            </tr>
-                            <!-- row 2 -->
                             <tr>
                                 <td>Kibble</td>
                                 <td id="kibble-qty">0</td>
-                                <td><button class="feed-btns btn btn-xs">feed</button></td>
+                                <td><button class="feed-btns btn btn-xs" name="kibble">feed</button></td>
                             </tr>
-                            <!-- row 3 -->
+
                             <tr>
                                 <td>Treats</td>
                                 <td id="treat-qty">0</td>
-                                <td><button class="feed-btns btn btn-xs">feed</button></td>
+                                <td><button class="feed-btns btn btn-xs" name="treat">feed</button></td>
                             </tr>
-                            <!-- row 4 -->
+
                             <tr>
                                 <td>Medicine</td>
                                 <td id="medicine-qty">0</td>
-                                <td><button class="feed-btns btn btn-xs">feed</button></td>
+                                <td><button class="feed-btns btn btn-xs" name="medicine">feed</button></td>
                             </tr>
                         </tbody>
                     </table>
@@ -261,13 +254,6 @@
                             </tr>
                         </thead>
                         <tbody>
-
-                            <tr>
-                                <td>Apple</td>
-                                <td>5</td>
-                                <td><button class="buy-btns btn btn-sm" name="apple" value="5">buy</button></td>
-                            </tr>
-
                             <tr>
                                 <td>Kibble</td>
                                 <td>8</td>
