informs users if they got the trivia correct

--- a/client/index.html
+++ b/client/index.html
@@ -11,6 +11,11 @@
         [type=radio]:checked+img {
             outline: 2px solid #141414;
         }
+
+        /* button:disabled {
+            background-color: white !important;
+            color: blue !important;
+        } */
     </style>
 </head>
 
