--- a/client/index.html
+++ b/client/index.html
@@ -289,7 +289,7 @@
         <dialog id="minigames-modal" class="modal modal-bottom sm:modal-middle">
             <div class="modal-box">
                 <form method="dialog">
-                    <button class="btn btn-sm btn-circle btn-ghost absolute right-2 top-2">✕</button>
+                    <button id="close-minigame-btn" class="btn btn-sm btn-circle btn-ghost absolute right-2 top-2">✕</button>
                 </form>
                 <h3 id="minigame-title" class="font-bold text-lg">Choose a Mini-Game</h3>
 
