--- a/client/test.html
+++ b/client/test.html
@@ -18,9 +18,9 @@
 
         <div id="game-container">
             <div>
-                <p class="text-xs text-center mt-4">(<span id="trivia-num">1</span> of 3)</p>
+                <!-- <p class="text-xs text-center mt-4">(<span id="trivia-num">1</span> of 3)</p>
 
-                <h4 id="trivia-question" class="text-neutral text-center">Test question</h4>
+                <h4 id="trivia-question" class="text-neutral">Test question</h4>
     
                 <div id="trivia-choices" class="flex flex-col gap-5">
                 </div>
@@ -33,6 +33,12 @@
                     <div class="flex justify-center mt-3">
                         <button class="btn btn-sm">next</button>
                     </div>
+                </div> -->
+
+                <h4 class="text-neutral text-center my-4 text-lg">Thanks for playing!</h4>
+                <p class="text-center font-bold">You were awarded $<span id="trivia-money">10</span></p>
+                <div class="flex justify-center mt-3">
+                    <button class="btn btn-sm">next</button>
                 </div>
             </div>
         </div>
