--- a/client/test.html
+++ b/client/test.html
@@ -17,7 +17,7 @@
         <h3 id="minigame-title" class="font-bold text-lg">Game of Chance</h3>
 
         <div id="game-container">
-            <div id="chance-game">
+            <!-- <div id="chance-game">
                 <p class="my-4">You have three tries to guess the correct number between 1 and 10</p>
 
                 <div id="chance-num-btns" class="join grid grid-cols-5 sm:grid-cols-10 w-full">
@@ -34,6 +34,12 @@
                 </div>
 
                 <p class="text-center mt-4 text-neutral">tries left: <span id="chance-tries-left">1</span></p>
+            </div> -->
+
+            <h4 class="text-neutral text-center my-4 text-lg">You won!</h4>
+            <p class="text-center font-bold">You were awarded $<span id="chance-money">${}</span></p>
+            <div class="flex justify-center mt-3">
+                <button id="finish-chance-btn" class="btn btn-sm">finish</button>
             </div>
         </div>
 
