--- a/client/index.html
+++ b/client/index.html
@@ -69,32 +69,32 @@
                 <div class="grid grid-cols-1 gap-2 text-xs leading-tight">
                     <div>
                         <p>Agility <span id="agility-label">0</span></p>
-                        <progress class="progress progress-secondary w-full" value="0" max="10"></progress>
+                        <progress id="agility-bar" class="progress progress-secondary w-full" value="0" max="10"></progress>
                     </div>
 
                     <div>
                         <p>Strength <span id="strength-label">0</span></p>
-                        <progress class="progress progress-secondary" value="0" max="10"></progress>
+                        <progress id="strength-bar" class="progress progress-secondary" value="0" max="10"></progress>
                     </div>
 
                     <div>
                         <p>Intelligence <span id="intelligence-label">0</span></p>
-                        <progress class="progress progress-secondary" value="0" max="10"></progress>
+                        <progress id="intelligence-bar" class="progress progress-secondary" value="0" max="10"></progress>
                     </div>
 
                     <div>
                         <p>Stealth <span id="stealth-label">0</span></p>
-                        <progress class="progress progress-secondary w-full" value="0" max="10"></progress>
+                        <progress id="stealth-bar" class="progress progress-secondary w-full" value="0" max="10"></progress>
                     </div>
 
                     <div>
                         <p>Endurance <span id="endurance-label">0</span></p>
-                        <progress class="progress progress-secondary" value="0" max="10"></progress>
+                        <progress id="endurance-bar" class="progress progress-secondary" value="0" max="10"></progress>
                     </div>
 
                     <div>
                         <p>Hunting <span id="hunting-label">0</span></p>
-                        <progress class="progress progress-secondary" value="0" max="10"></progress>
+                        <progress id="hunting-bar" class="progress progress-secondary" value="0" max="10"></progress>
                     </div>
                 </div>
             </div>
@@ -289,7 +289,8 @@
         <dialog id="minigames-modal" class="modal modal-bottom sm:modal-middle">
             <div class="modal-box">
                 <form method="dialog">
-                    <button id="close-minigame-btn" class="btn btn-sm btn-circle btn-ghost absolute right-2 top-2">✕</button>
+                    <button id="close-minigame-btn"
+                        class="btn btn-sm btn-circle btn-ghost absolute right-2 top-2">✕</button>
                 </form>
                 <h3 id="minigame-title" class="font-bold text-lg">Choose a Mini-Game</h3>
 
@@ -315,12 +316,58 @@
         <dialog id="skill-training-modal" class="modal modal-bottom sm:modal-middle">
             <div class="modal-box">
                 <form method="dialog">
-                    <button id="close-skill-training-btn" class="btn btn-sm btn-circle btn-ghost absolute right-2 top-2">✕</button>
+                    <button id="close-skill-training-btn"
+                        class="btn btn-sm btn-circle btn-ghost absolute right-2 top-2">✕</button>
                 </form>
                 <h3 id="skill-training-title" class="font-bold text-lg">Skill Training</h3>
 
-                
+                <div class="overflow-x-auto">
+                    <p class="text-neutral my-4">Send your pet to training to improve their skills! Choose the skill and
+                        intensity below.</p>
+                    <table class="table">
+                        <thead>
+                            <tr>
+                                <th>Skill</th>
+                                <th>Current Level</th>
+                                <th>Training Intensity</th>
+                            </tr>
+                        </thead>
+                        <tbody>
+                            <tr>
+                                <td>Agility</td>
+                                <td class="skill-modal-labels" data-name="agility">0</td>
+                                <td>
+                                    <button name="agility" value="low" 
+                                        class="low-intensity-btn btn btn-sm">Low</button>
+                                    <button name="agility" value="high"
+                                        class="high-intensity-btn btn btn-sm">High</button>
+                                </td>
+                            </tr>
 
+                            <tr>
+                                <td>Strength</td>
+                                <td class="skill-modal-labels" data-name="strength">0</td>
+                                <td>
+                                    <button name="strength" value="low"
+                                        class="low-intensity-btn btn btn-sm">Low</button>
+                                    <button name="strength" value="high"
+                                        class="high-intensity-btn btn btn-sm">High</button>
+                                </td>
+                            </tr>
+
+                            <tr>
+                                <td>Intelligence</td>
+                                <td class="skill-modal-labels" data-name="intelligence">0</td>
+                                <td>
+                                    <button name="intelligence" value="low"
+                                        class="low-intensity-btn btn btn-sm">Low</button>
+                                    <button name="intelligence" value="high"
+                                        class="high-intensity-btn btn btn-sm">High</button>
+                                </td>
+                            </tr>
+                        </tbody>
+                    </table>
+                </div>
             </div>
         </dialog>
 
