--- a/client/test.html
+++ b/client/test.html
@@ -12,36 +12,54 @@
 <body class="font-mono">
     <div class="modal-box">
         <form method="dialog">
-            <button id="close-minigame-btn" class="btn btn-sm btn-circle btn-ghost absolute right-2 top-2">✕</button>
+            <button id="close-skill-training-btn"
+                class="btn btn-sm btn-circle btn-ghost absolute right-2 top-2">✕</button>
         </form>
-        <h3 id="minigame-title" class="font-bold text-lg">Game of Chance</h3>
+        <h3 id="skill-training-title" class="font-bold text-lg">Skill Training</h3>
 
-        <div id="game-container">
-            <!-- <div id="chance-game">
-                <p class="my-4">You have three tries to guess the correct number between 1 and 10</p>
+        <div class="overflow-x-auto">
+            <p class="text-neutral my-4">Send your pet to training to improve their skills! Choose the skill and intensity below.</p>
+            <table class="table">
+                
+                <thead>
+                    <tr>
+                        <th>Skill</th>
+                        <th>Current Level</th>
+                        <th>Training Intensity</th>
+                    </tr>
+                </thead>
+                <tbody>
 
-                <div id="chance-num-btns" class="join grid grid-cols-5 sm:grid-cols-10 w-full">
-                    <button class="btn btn-outline sm:join-item">1</button>
-                    <button class="btn btn-outline sm:join-item">2</button>
-                    <button class="btn btn-outline sm:join-item">3</button>
-                    <button class="btn btn-outline sm:join-item">4</button>
-                    <button class="btn btn-outline sm:join-item">5</button>
-                    <button class="btn btn-outline sm:join-item">6</button>
-                    <button class="btn btn-outline sm:join-item">7</button>
-                    <button class="btn btn-outline sm:join-item">8</button>
-                    <button class="btn btn-outline sm:join-item">9</button>
-                    <button class="btn btn-outline sm:join-item">10</button>
-                </div>
+                    <tr>
+                        <td>Agility</td>
+                        <td>0</td>
+                        <td>
+                            <button name="agility" value="low" class="low-intensity-btn btn btn-sm">Low</button>
+                            <button name="agility" value="high" class="high-intensity-btn btn btn-sm">High</button>
+                        </td>
+                    </tr>
 
-                <p class="text-center mt-4 text-neutral">tries left: <span id="chance-tries-left">1</span></p>
-            </div> -->
+                    <tr>
+                        <td>Strength</td>
+                        <td>0</td>
+                        <td>
+                            <button name="strength" value="low" class="low-intensity-btn btn btn-sm">Low</button>
+                            <button name="strength" value="high" class="high-intensity-btn btn btn-sm">High</button>
+                        </td>
+                    </tr>
 
-            <h4 class="text-neutral text-center my-4 text-lg">You won!</h4>
-            <p class="text-center font-bold">You were awarded $<span id="chance-money">${}</span></p>
-            <div class="flex justify-center mt-3">
-                <button id="finish-chance-btn" class="btn btn-sm">finish</button>
-            </div>
+                    <tr>
+                        <td>Intelligence</td>
+                        <td>0</td>
+                        <td>
+                            <button name="intelligence" value="low" class="low-intensity-btn btn btn-sm">Low</button>
+                            <button name="intelligence" value="high" class="high-intensity-btn btn btn-sm">High</button>
+                        </td>
+                    </tr>
+                </tbody>
+            </table>
         </div>
+
 
     </div>
 </body>
